--- a/class-assignments/Class_Question_Solutions_13_to_15Dec.ipynb
+++ b/class-assignments/Class_Question_Solutions_13_to_15Dec.ipynb
@@ -71,7 +71,7 @@
    ],
    "source": [
     "def circle():\n",
-    "    r=int(input(\"Enter the radious of circle:\"))\n",
+    "    r=float(input(\"Enter the radious of circle:\"))\n",
     "    area=3.143*r*r\n",
     "    circumference = 2*3.143*r\n",
     "    \n",
